# scenic

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo-husky/hooks/: pre-commit
example/: slide.latex
src/: main.rs
src/theme/default/: preamble.latex
test/: cmd.rs
test/data/: input.latex  invalid.latex
